Add logout endpoint and user endpoints swagger documentation
