# public/swagger/swagger.yml
@@ -1,6 +1,130 @@
 openapi: 3.0.0
 # https://petstore3.swagger.io/api/v3/openapi.json
 info:
-  title: Pet Shop APIs
+  title: Pet Shop API - Swagger Documentation
   #  description: Pet Shop APIs.
   version: 1.0.0
+
+tags:
+  - name: User
+    description: User Api endpoint
+  - name: Orders
+    description: Orders Api endpoint
+
+paths:
+  /api/v1/user/login:
+    post:
+      tags:
+        - User
+      summary: Login an User account
+      operationId: user-login
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              required:
+                - email
+                - password
+              properties:
+                email:
+                  type: string
+                  description: User email
+                password:
+                  type: string
+                  description: User password
+              type: object
+
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: Page not found
+        422:
+          description: Unprocessable Entity
+        500:
+          description: Internal server error
+      security: []
+
+  /api/v1/user/create:
+    post:
+      tags:
+        - User
+      summary: Create a User account
+      operationId: user-create
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              required:
+                - first_name
+                - last_name
+                - email
+                - password
+                - password_confirmation
+                - address
+                - phone_number
+              properties:
+                first_name:
+                  type: string
+                  description: User firstname
+                last_name:
+                  type: string
+                  description: User lastname
+                email:
+                  type: string
+                  description: User email
+                password:
+                  type: string
+                  description: User password
+                password_confirmation:
+                  type: string
+                  description: User password
+                avatar:
+                  type: string
+                  description: Avatar image UUID
+                address:
+                  type: string
+                  description: User main address
+                phone_number:
+                  type: string
+                  description: User main phone number
+                is_marketing:
+                  type: string
+                  description: User marketing preferences
+              type: object
+
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: Page not found
+        422:
+          description: Unprocessable Entity
+        500:
+          description: Internal server error
+      security: []
+
+  /api/v1/user/logout:
+    get:
+      tags:
+        - User
+      summary: Logout an User account
+      operationId: user-logout
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: Page not found
+        422:
+          description: Unprocessable Entity
+        500:
+          description: Internal server error
+      security: []
