# routes/api.php
@@ -14,14 +14,15 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
+Route::middleware('jwt.auth')->get('/logout', [App\Http\Controllers\AuthController::class, 'logout'])->name('logout');
 
 Route::group(['prefix' => 'v1'], function () {
     Route::group(['prefix' => 'user'], function () {
         Route::middleware('api')->group(function () {
             Route::post('login', [App\Http\Controllers\AuthController::class, 'login'])->name('login');
+            Route::middleware('jwt.auth')->group(function () {
+                Route::get('logout', [App\Http\Controllers\AuthController::class, 'logout'])->name('logout');
+            });
         });
         Route::post('create', [App\Http\Controllers\AuthController::class, 'create'])->name('user.create');
     });
